# LiveStreamer

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/LiveStreamer/: DisplayDeviceSource.cpp  DisplayDeviceSource.h  H264_DisplayDeviceSource.cpp  H264_DisplayDeviceSource.h  ServerMediaSubsession.cpp  ServerMediaSubsession.h  edu_papan01_livestreamer_Live555Native.cpp  edu_papan01_livestreamer_Live555Native.h  live_streamer.cpp  live_streamer.h  log.h
